# Morandi-Schedule

./: .editorconfig  .gitignore  CHANGELOG.md  DESIGN.md  FLOW.md  LICENSE  README.md  REVIEW.md  TASK_BOOK.md  cargo_err.txt  cargo_err2.txt  cargo_err3.txt  cargo_err4.txt  cloudbaserc.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
.github/workflows/: build.yml
.trae/documents/: complete-logic-chain.md  layout-ui-consolidation-plan.md  mobile-toolbar-habits-plan.md  nav-feature-audit-plan.md  ui-polish-plan.md  upcoming-redesign-plan.md
.trae/rules/: 000-globalrule.md  001-error-memory.md  002-platform-compat.md  003-terminal-auto-approve.md  004-self-check-hook.md
docs/: 01-cloudbase-migration-guide.md  course-api-spec.md  course-decouple-v0.5.0.md  course-detail-v0.5.1.md  course-plugin-design.md  fix-plan-v0.4.5.md  fix-v0.4.8.md  sample-course.ics  shared-habit-refactor.md  sync-refactor-plan.md  ui-polish-v0.4.7.md  user-guide.md  持续事件-三链.md
icon-concepts/: analyze_img.py  analyze_ref1.py  bg-service-plan.md  fix-plan.md  gen_ico.py  gen_keystore.bat  generate_icons.py  make_transparent_tray.py  make_tray_icon.py  plan3.md  render_svg.ps1  update_all_icons.py
scripts/: release.bat  worker.js  wrangler.jsonc
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/morandi-plugin/: Cargo.toml  build.rs
src-tauri/plugins/morandi-plugin/android/: build.gradle.kts
src-tauri/plugins/morandi-plugin/android/src/main/java/com/morandi/schedule/plugin/: MorandiPlugin.kt  ReminderReceiver.kt
src-tauri/plugins/morandi-plugin/permissions/autogenerated/: reference.md
src-tauri/plugins/morandi-plugin/permissions/autogenerated/commands/: cancelReminder.toml  scheduleReminder.toml  shareFile.toml
src-tauri/plugins/morandi-plugin/permissions/schemas/: schema.json
src-tauri/plugins/morandi-plugin/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
src/db/: index.ts
tests/: utils.test.ts
(+89 files in other folders)
